# MiniCoder

./: .gitignore  LICENSE  README.md  README_zh.md  agent.py  browser_tools.py  config.example.json  desktop_tools.py  llm_client.py  main.py  pyproject.toml  tools.py  tui.py
skills/: explore_codebase.md  safe_refactor.md  write_tests.md
